--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sopaipillas chilenas</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -19,8 +20,7 @@
 
     <img src="https://plus.unsplash.com/premium_vector-1721296174578-d245a4d6f331?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y2hlZnxlbnwwfHwwfHx8MA%3D%3D"
         alt="chef">
-    <video src="https://videos.pexels.com/video-files/3209214/3209214-uhd_2560_1440_25fps.mp4" autoplay loop muted
-        width="1600" height="900"></video>
+    <video src="https://videos.pexels.com/video-files/3209214/3209214-uhd_2560_1440_25fps.mp4" autoplay loop muted></video>
 
     <main>
         <section id="Ingredientes">
