--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <img src="https://plus.unsplash.com/premium_vector-1721296174578-d245a4d6f331?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y2hlZnxlbnwwfHwwfHx8MA%3D%3D"
         alt="chef">
+    <div class="video-container">
     <video src="https://videos.pexels.com/video-files/3209214/3209214-uhd_2560_1440_25fps.mp4" autoplay loop muted></video>
+    </div>
 
     <main>
         <section id="Ingredientes">
